...
                handleChange = {
                    viewModel.onConfirmPasswordChange(it)
                    viewModel.verifyInputs()
                })
            Spacer(Modifier.height(32.dp))
            CtaButton(
                label = "Sign Up",
                handleClick = {
                    viewModel.onSignUpClicked()
                    if (!state.hasErrored) {
                        navController.navigate(ScreenNames.LOGIN.name)
                    }
                })
...
